Fix the OSGi Functional Tests for JDK 11
Signed-off-by: Jan Supol <jan.supol@oracle.com>