@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010, 2019 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2010, 2020 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Distribution License v. 1.0, which is available at
@@ -35,6 +35,7 @@ import javax.ws.rs.core.UriBuilder;
 
 import javax.inject.Inject;
 
+import org.glassfish.jersey.internal.util.JdkVersion;
 import org.glassfish.jersey.internal.util.PropertiesHelper;
 
 import org.ops4j.pax.exam.Configuration;
@@ -54,6 +55,7 @@ import static org.ops4j.pax.exam.CoreOptions.mavenBundle;
 import static org.ops4j.pax.exam.CoreOptions.options;
 import static org.ops4j.pax.exam.CoreOptions.systemPackage;
 import static org.ops4j.pax.exam.CoreOptions.systemProperty;
+import static org.ops4j.pax.exam.CoreOptions.vmOption;
 
 /**
  * @author Jakub Podlesak
@@ -104,6 +106,7 @@ public abstract class AbstractWebAppTest {
 
                 // uncomment for verbose class loading info
                 // vmOption("-verbose:class"),
+                getAddOpensForFelixFrameWorkSecurity(),
 
                 // bootDelegationPackage("org.glassfish.jersey.client.*"),
 
@@ -147,6 +150,7 @@ public abstract class AbstractWebAppTest {
                 mavenBundle().groupId("jakarta.xml.bind").artifactId("jakarta.xml.bind-api").versionAsInProject(),
                 //SUN JAXB IMPL OSGI
                 mavenBundle().groupId("com.sun.xml.bind").artifactId("jaxb-osgi").versionAsInProject().versionAsInProject(),
+                getActivationBundle(),
                 systemPackage("com.sun.source.tree"),
                 systemPackage("com.sun.source.util"),
 
@@ -188,6 +192,18 @@ public abstract class AbstractWebAppTest {
         }
 
         return options;
+    }
+
+    private static Option getActivationBundle() {
+        return JdkVersion.getJdkVersion().getMajor() > 8
+                ? mavenBundle().groupId("com.sun.activation").artifactId("jakarta.activation").versionAsInProject()
+                : null;
+    }
+
+    private static Option getAddOpensForFelixFrameWorkSecurity() {
+        return JdkVersion.getJdkVersion().getMajor() > 8
+                ? vmOption("--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED")
+                : null;
     }
 
     public List<Option> jettyOptions() {
